--- a/resources/sass/datepicker.sass
+++ b/resources/sass/datepicker.sass
@@ -180,3 +180,6 @@
 
 .datepicker.datepicker-active ~ .icon
   color: $input-icon-active-color
+
+.datepicker:focus-within ~ .icon
+  color: $input-icon-active-color
