--- a/resources/sass/event.sass
+++ b/resources/sass/event.sass
@@ -53,6 +53,8 @@
       font-size: $size-medium
       margin-bottom: 25px
     .description_list_group
+      .event_link
+        word-break: break-all
       +tablet
         display: flex
       dt
