--- a/resources/sass/timepicker.sass
+++ b/resources/sass/timepicker.sass
@@ -43,5 +43,8 @@
 .timepicker.timepicker-active ~ .icon
   color: $input-icon-active-color
 
+.timepicker:focus-within ~ .icon
+  color: $input-icon-active-color
+
 .form .form_input_icon.form_input_icon-icon_left .timepicker select
   padding: 4px
